@@ -48,7 +48,9 @@ typedef enum {
 	EVAL_EVALUATE_GLOSSYCOATING_SETUP,
 	EVAL_SAMPLE_GLOSSYCOATING_SETUP,
 	EVAL_SAMPLE_GLOSSYCOATING_CLOSE_SAMPLE_BASE,
-	EVAL_SAMPLE_GLOSSYCOATING_CLOSE_EVALUATE_BASE
+	EVAL_SAMPLE_GLOSSYCOATING_CLOSE_EVALUATE_BASE,
+	// For the very special case of TwoSided material
+	EVAL_TWOSIDED_SETUP
 } MaterialEvalOpType;
 
 typedef struct {
