@@ -22,16 +22,7 @@
 // TwoSided material
 //------------------------------------------------------------------------------
 
-OPENCL_FORCE_INLINE void TwoSidedMaterial_Albedo(__global const Material* restrict material,
-		__global const HitPoint *hitPoint,
-		__global float *evalStack, uint *evalStackOffset
-		MATERIALS_PARAM_DECL) {
-	// const float3 albedo = Spectrum_Clamp(Texture_GetSpectrumValue(material->matte.kdTexIndex,
-	// 		hitPoint TEXTURES_PARAM));
-    const float3 albedo = (float3)(0.5f, 0.f, 0.f);
-
-	EvalStack_PushFloat3(albedo);
-}
+// NOTE: there is a special case for TwoSided material in Material_Bump()
 
 OPENCL_FORCE_INLINE void TwoSidedMaterial_GetInteriorVolume(__global const Material* restrict material,
 		__global const HitPoint *hitPoint,
@@ -61,62 +52,6 @@ OPENCL_FORCE_INLINE void TwoSidedMaterial_GetEmittedRadiance(__global const Mate
 	DefaultMaterial_GetEmittedRadiance(material, hitPoint, evalStack, evalStackOffset MATERIALS_PARAM);
 }
 
-OPENCL_FORCE_NOT_INLINE void TwoSidedMaterial_Evaluate(__global const Material* restrict material,
-		__global const HitPoint *hitPoint,
-		__global float *evalStack, uint *evalStackOffset
-		MATERIALS_PARAM_DECL) {
-	float3 lightDir, eyeDir;
-	EvalStack_PopFloat3(eyeDir);
-	EvalStack_PopFloat3(lightDir);
-
-	// const float3 kdVal = Texture_GetSpectrumValue(material->matte.kdTexIndex, hitPoint TEXTURES_PARAM);
-	const float3 kdVal = (float3)(0.5f, 0.f, 0.f);
-	const float3 result = Spectrum_Clamp(kdVal) * fabs(lightDir.z * M_1_PI_F);
-
-	const BSDFEvent event = DIFFUSE | REFLECT;
-
-	const float directPdfW = fabs(lightDir.z * M_1_PI_F);
-
-	EvalStack_PushFloat3(result);
-	EvalStack_PushBSDFEvent(event);
-	EvalStack_PushFloat(directPdfW);
-    
-    
-}
-
-OPENCL_FORCE_NOT_INLINE void TwoSidedMaterial_Sample(__global const Material* restrict material,
-		__global const HitPoint *hitPoint,
-		__global float *evalStack, uint *evalStackOffset
-		MATERIALS_PARAM_DECL) {
-	float u0, u1, passThroughEvent;
-	EvalStack_PopFloat(passThroughEvent);
-	EvalStack_PopFloat(u1);
-	EvalStack_PopFloat(u0);
-	float3 fixedDir;
-	EvalStack_PopFloat3(fixedDir);
-
-	if (fabs(fixedDir.z) < DEFAULT_COS_EPSILON_STATIC) {
-		MATERIAL_SAMPLE_RETURN_BLACK;
-	}
-
-	float pdfW;
-	const float3 sampledDir = (signbit(fixedDir.z) ? -1.f : 1.f) * CosineSampleHemisphereWithPdf(u0, u1, &pdfW);
-	if (fabs(CosTheta(sampledDir)) < DEFAULT_COS_EPSILON_STATIC) {
-		MATERIAL_SAMPLE_RETURN_BLACK;
-	}
-	
-	// const float3 kdVal = Texture_GetSpectrumValue(material->matte.kdTexIndex, hitPoint TEXTURES_PARAM);
-	const float3 kdVal = (float3)(0.5f, 0.f, 0.f);
-	const float3 result = Spectrum_Clamp(kdVal);
-
-	const BSDFEvent event = DIFFUSE | REFLECT;
-
-	EvalStack_PushFloat3(result);
-	EvalStack_PushFloat3(sampledDir);
-	EvalStack_PushFloat(pdfW);
-	EvalStack_PushBSDFEvent(event);
-}
-
 //------------------------------------------------------------------------------
 // Material specific EvalOp
 //------------------------------------------------------------------------------
@@ -129,9 +64,6 @@ OPENCL_FORCE_NOT_INLINE void TwoSidedMaterial_EvalOp(
 		__global const HitPoint *hitPoint
 		MATERIALS_PARAM_DECL) {
 	switch (evalType) {
-		case EVAL_ALBEDO:
-			TwoSidedMaterial_Albedo(material, hitPoint, evalStack, evalStackOffset MATERIALS_PARAM);
-			break;
 		case EVAL_GET_INTERIOR_VOLUME:
 			TwoSidedMaterial_GetInteriorVolume(material, hitPoint, evalStack, evalStackOffset MATERIALS_PARAM);
 			break;
@@ -144,12 +76,11 @@ OPENCL_FORCE_NOT_INLINE void TwoSidedMaterial_EvalOp(
 		case EVAL_GET_PASS_TROUGH_TRANSPARENCY:
 			TwoSidedMaterial_GetPassThroughTransparency(material, hitPoint, evalStack, evalStackOffset MATERIALS_PARAM);
 			break;
-		case EVAL_EVALUATE:
-			TwoSidedMaterial_Evaluate(material, hitPoint, evalStack, evalStackOffset MATERIALS_PARAM);
+		case EVAL_TWOSIDED_SETUP: {
+			const bool condition = !hitPoint->intoObject;
+			EvalStack_PushInt(condition);
 			break;
-		case EVAL_SAMPLE:
-			TwoSidedMaterial_Sample(material, hitPoint, evalStack, evalStackOffset MATERIALS_PARAM);
-			break;
+		}		
 		default:
 			// Something wrong here
 			break;
